# Uni-RNA

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  build_model.py  copyright  pyproject.toml  requirements.txt  使用许可
.github/workflows/: ci.yml
example/: example.fasta  extract_embedding.ipynb  finetune_via_transformers.ipynb  train.csv
example/fasta/: example_1.fasta
notebook/: evaluate-auroc-bpRNA.ipynb  evaluate-auroc-mxfold.ipynb  evaluate-auroc.ipynb
tests/: conftest.py  test_flash_attention.py  test_infer_and_split.py  test_model_outputs.py  test_tokenizer.py  test_weights_integration.py
unirna/: __init__.py  build_model.py  model.py  tokenizer.py
unirna_tf/: __init__.py  build_model.py  config.py  infer.py  model.py  split.py  tokenizer.py  unirna_flash_attn.py
unirna_tf/template/: special_tokens_map.json  tokenizer_config.json  vocab.txt
unirna_tf/tokenizer/bpe/: tokenizer.json
unirna_tf/tokenizer/plant_bpe/: tokenizer.json  tokenizer_config.json
